--- a/LinkFinder/app/src/main/res/values/strings.xml
+++ b/LinkFinder/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="title_item_detail">Item Detail</string>
 
     <string name="loading">Loading…</string>
+
+    <string name="main_edit_website_hint">Website</string>
+    <string name="main_text_website_title">Enter website to crawl!</string>
+    <string name="default_website">http://www.visual-engin.com</string>
+
+    <!-- Error strings -->
+    <string name="error_website_empty">Website url cannot be empty</string>
+    <string name="error_website_wrong_format">Website url not valid</string>
 </resources>
